# Projet_Algo_DEV

./: .gitignore  README.md  app.py  pyproject.toml  requirements-full.txt  requirements-minimal.txt
consignes/: guide_memoire.md
livrables/: presentation_sujet9_bases_vectorielles.pptx  script_oral_15min.md
memoire/: annexe_dataset_et_protocole.md  memoire.md
outputs/: dimensionality.csv  embeddings.npy  evaluation.csv  hnsw_tradeoff.csv  regime_comparison.csv  regime_summary.json  scale_benchmark.csv  scale_benchmark_meta.json  summary.json
scripts/: benchmark_hnsw.py  benchmark_scale.py  build_memoire_pdf.py  build_slides.py  intro_embeddings_20_phrases.py  make_figures.py  make_hnsw_diagram.py  run_experiment.py
src/vector_search_memoire/: __init__.py  bm25.py  dataset.py  embeddings.py  evaluation.py  experiments.py  hybrid.py  scale.py  text.py  vector_index.py
tests/: test_core.py  test_extensions.py
